commons: modify configuration mechanics so a public constants class is no longer needed commons: move all dto's to common package independent from configuration reader implementation commons: make xml configuration reader cache read data and validate most values at startup vcs-plugins: fix some remaining errors from previous revisions